yamls/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise
  labels:
    app: flowise
spec:
  selector:
    matchLabels:
      app: flowise
  replicas: 1
  template:
    metadata:
      labels:
        app: flowise
    spec:
      containers:
        - name: flowise
          image: gcr.io/lunaraspect-9ffa3/flowise:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "4"
              memory: "8Gi"
