yamls/service.yaml
# service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "flowise-service"
  namespace: "default"
  labels:
    app: "flowise"
spec:
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
  selector:
    app: "flowise"
  type: "NodePort"
