yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowise-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: flowise-ip-dev
    networking.gke.io/managed-certificates: flowise-cert-dev
    ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: flowise-service
      port:
        number: 3000
